--- a/mobile.html
+++ b/mobile.html
@@ -12,16 +12,16 @@
 		html, body {
 			overflow: hidden;
 			width: 100%;
-			height: 100%;
+			height: 100vh;
 		}
 		
 		body {
-			margin: 0;
+			margin: 0px;
 			background: #2c3e50 url('icons/SteamDBFlat.png') center no-repeat fixed;
 			-webkit-transform: translateZ(0);
 			transform: translateZ(0);
 			-webkit-transition: background-image .1s linear;
-			transition: background-image .1s linear;
+			transition: background-image 0.1s linear;
 		}
 		
 		#performance {
